[package]
name = "iusd_protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.7"
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.5"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }